--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,11 @@
+alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.11.0
+asyncmy==0.2.10
 certifi==2025.8.3
+cffi==2.0.0
 click==8.3.0
+cryptography==46.0.2
 dnspython==2.8.0
 email-validator==2.3.0
 fastapi==0.118.0
@@ -14,15 +18,19 @@ httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
 orjson==3.11.3
+passlib==1.7.4
+pycparser==2.23
 pydantic==2.11.9
 pydantic-extra-types==2.10.5
 pydantic-settings==2.11.0
 pydantic_core==2.33.2
 Pygments==2.19.2
+PyMySQL==1.1.2
 python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.3
@@ -32,6 +40,7 @@ rignore==0.6.4
 sentry-sdk==2.39.0
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.43
 starlette==0.48.0
 typer==0.19.2
 typing-inspection==0.4.2
