--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -30,6 +30,7 @@ pydantic-extra-types==2.10.5
 pydantic-settings==2.11.0
 pydantic_core==2.33.2
 Pygments==2.19.2
+PyJWT==2.10.1
 PyMySQL==1.1.2
 python-dotenv==1.1.1
 python-multipart==0.0.20
